Remove "clean" from validation job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       # restore cached dependencies? or at least gradle wrapper?
       - checkout
-      - run: ./gradlew clean publishToMavenLocal
+      - run: ./gradlew publishToMavenLocal
 
   release:
     docker:
