--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - image: circleci/openjdk:8u181
     steps:
       - checkout
+      - run: ./gradlew assertCredentialsPresent
       - run: ./gradlew assertIsRelease
       - run: ./gradlew handlePublications
 
@@ -22,6 +23,7 @@ jobs:
       - image: circleci/openjdk:8u181
     steps:
       - checkout
+      - run: ./gradlew assertCredentialsPresent
       - run: ./gradlew assertIsSnapshot
       - run: ./gradlew handlePublications
 
